Remove wrap for hostname and FQDN, add ellipsis with tooltip Fixes: https://github.com/oVirt/ovirt-web-ui/issues/902

--- a/src/components/VmDetails/cards/DetailsCard/style.css
+++ b/src/components/VmDetails/cards/DetailsCard/style.css
@@ -67,3 +67,9 @@
   width: 40%;
   display: inline-block;
 }
+
+.hostname {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
